--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -28,6 +28,7 @@ pyrsistent==0.18.1
 pytz==2022.1
 six==1.16.0
 SQLAlchemy==1.4.40
+SQLAlchemy-Utils==0.38.3
 toml==0.10.2
 tomli==2.0.1
 vine==5.0.0
