--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,8 @@
-FROM python:3.8-slim-buster
+FROM python:3.10-slim-buster
 
 COPY ./api ./app
 WORKDIR /app
-RUN pip install -r ./requirements.txt
-ENTRYPOINT [ "python" ]
-CMD ["app.py"]
+RUN pip install -r requirements.txt
+RUN python data.py
+EXPOSE 3001
+CMD ["python", "runserver.py"]
